--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,142 +1,1 @@
-/*
-=============================================
-		Ayu palette
-=============================================
-Name	Normal	Light	Dark	Notes
-====	======	=====	====	=====
-accent	#FFAA33	#FFCC85	#	coolors
-black	#242936	#######	#1A1F29	
-blue	#399EE6	#73D0FF	#	ayu
-cyan	#4CBF99	#95E6CB #	ayu
-gray	#565B66	#CCCAC2	#5C6166	
-green	#6CBF43	#87D96C	#	ayu
-orange	#FA8D3E	#FFAD66	#	ayu
-pink	#FF7383	#FFADB7	#	l+co
-red	#E65050	#F2A6A6	#	l+co
-tomato	#F07171	#F28779	#	ayu
-violet	#A37ACC	#DFBFFF	#695380	
-white	#FCFCFC	#######	#######	
-yellow	#F2AE49	#FFD173	#	ayu
-*/
-
-
-* {
-    padding: 0 9px;
-    background: transparent;
-
-    font-family: Inconsolata Medium;
-    font-size: 17px;
-    color: #5C6166;
-    text-shadow: none;
-}
-
-window#waybar {}
-
-tooltip {
-    background: #FCFCFC;
-}
-tooltip label {}
-
-
-.modules-left {}
-
-#clock {
-    border-radius: 15px 0 0 15px;
-    background: #FCFCFC;
-}
-
-#idle_inhibitor.activated {
-    background: #FCFCFC;
-}
-#idle_inhibitor.deactivated {
-    background: #242936;
-    color: #CCCAC2;
-}
-
-#keyboard-state {
-    background: #87D96C;
-    color: #FCFCFC;
-}
-
-#mpd {
-    border-radius: 0 15px 15px 0;
-    background: #FCFCFC;
-}
-
-#tray {
-    border-radius: 15px;
-    background: #FCFCFC;
-}
-
-
-.modules-center {}
-
-#workspaces {
-    border-radius: 15px;
-    padding: 0;
-    background: #FCFCFC;
-}
-#workspaces button {
-    border: none;
-    border-radius: 15px;
-    padding: 0 1.5px;
-}
-#workspaces button:hover {
-    background: @theme_unfocused_fg_color;
-}
-#workspaces button.focused {
-    background: #399EE6;
-}
-
-#mode {
-    border-radius: 15px;
-    background: #FCFCFC;
-}
-
-
-.modules-right {}
-
-#pulseaudio {
-    border-radius: 15px 0 0 15px;
-    background: #FCFCFC;
-}
-
-#backlight {
-    background: @theme_base_color;
-}
-
-#temperature {
-    background: #FFAD66;
-}
-#temperature.critical {
-    background: #E65050;
-}
-
-#network {
-    background: lightskyblue;
-}
-
-#cpu {
-    background: darkslateblue;
-    color: white;
-}
-
-#memory {
-    background: mediumpurple;
-}
-
-#battery {
-    border-radius: 0 15px 15px 0;
-}
-#battery.full {
-    background: #87D96C;
-}
-#battery.good {
-    background: #95E6CB;
-}
-#battery.warning {
-    background: #FFAA33;
-}
-#battery.critical {
-    background: #E65050;
-}
+@import "ayu-light.css";
